welcome.lessons.welcome.bdr.BDR.scala.code

if(estSurMessage){
	if(litMessage():A){
		avance();
	}
}
